--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Sublime Text #
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
