--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# VIM - Temporary Files
+*.swp
+
 # Sublime Text #
 Package Control.last-run
 Package Control.ca-list
@@ -51,3 +54,5 @@ Package Control.ca-bundle
 Package Control.system-ca-bundle
 Package Control.cache/
 Package Control.ca-certs/
+Package Control.merged-ca-bundle
+Package Control.user-ca-bundle
