Add keybinding for reloading tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,3 +42,6 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
