--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,25 +1,32 @@
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
+# -------------------
+# SETTINGS/OPTIONS
+# -------------------
 # improve colors
 set -g default-terminal "screen-256color"
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right ''
+
+# enable activity monitoring, this will highlight the window in which the activity took place
+setw -g monitor-activity on
+set -g visual-activity on
+
+# removes annoying delay when switching modes in vim
+set -sg escape-time 0
+
+# Mac OS X clipboard integration
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+
+# -------------------
+# KEYBINDINGS
+# -------------------
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # act like vim
 setw -g mode-keys vi
@@ -30,18 +37,14 @@ bind-key -r l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-# enable activity monitoring, this will highlight the window in which the activity took place
-setw -g monitor-activity on
-set -g visual-activity on
-
-# removes annoying delay when switching modes in vim
-set -sg escape-time 0
-
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# reload config file (change file location to your the tmux.conf you want to use)
+# Enable mouse scrolling
+set-option -g -q mouse on
+
+# reload config file
 bind r source-file ~/.tmux.conf
