--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -g visual-activity on
 set -sg escape-time 0
 
 # Mac OS X clipboard integration
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh 2> /dev/null || zsh"
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 
