--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,8 +16,8 @@ set -g visual-activity on
 set -sg escape-time 0
 
 # Mac OS X clipboard integration
-set-option -g default-command "reattach-to-user-namespace -l zsh 2> /dev/null || zsh"
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+#set-option -g default-command "reattach-to-user-namespace -l zsh 2> /dev/null || zsh"
+#bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 
 # -------------------
@@ -38,8 +38,8 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
