Fix tmux config bug
- Wouldn't let me use 'A' to switch to the left pane

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,9 +24,9 @@ set -sg escape-time 0
 # KEYBINDINGS
 # -------------------
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+unbind C-b
+bind-key a send-prefix
 
 # act like vim
 setw -g mode-keys vi
