--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,6 @@ set -sg escape-time 0
 #set-option -g default-command "reattach-to-user-namespace -l zsh 2> /dev/null || zsh"
 #bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
-
 # -------------------
 # KEYBINDINGS
 # -------------------
@@ -37,14 +36,42 @@ bind-key -r l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# Resize pane shortcuts
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
+
 # split panes using | and -
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
+# quickly open a new window
+bind N new-window
+
 # Enable mouse scrolling
 set-option -g -q mouse on
 
 # reload config file
 bind r source-file ~/.tmux.conf
+
+# tile all windows
+unbind =
+bind = select-layout tiled
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+
+# more settings to make copy-mode more vim-like
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# Buffers to/from Mac clipboard, yay tmux book from pragprog
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
