--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -1,3 +1,4 @@
+default-key 8278BD0CE91E14366C2E21347625D69056DA603C
 require-cross-certification
 charset utf-8
 keyserver hkps://hkps.pool.sks-keyservers.net
