Update tmux configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,19 +1,13 @@
 # -------------------
 # SETTINGS/OPTIONS
 # -------------------
-# improve colors
-set -g default-terminal "screen-256color"
-
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-set -g status-right ''
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 # enable activity monitoring, this will highlight the window in which the activity took place
 setw -g monitor-activity on
 set -g visual-activity on
-
-# removes annoying delay when switching modes in vim
-set -sg escape-time 0
 
 # -------------------
 # KEYBINDINGS
@@ -23,44 +17,28 @@ set-option -g prefix C-a
 unbind C-b
 bind-key a send-prefix
 
-# act like vim
-setw -g mode-keys vi
-bind-key -r h select-pane -L
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
-# Resize pane shortcuts
-bind -r H resize-pane -L 10
-bind -r J resize-pane -D 10
-bind -r K resize-pane -U 10
-bind -r L resize-pane -R 10
-
-# split panes using | and -
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
-unbind '"'
-unbind %
-
 # Enable mouse scrolling
 set-option -g -q mouse on
-
-# reload config file
-bind r source-file ~/.tmux.conf
 
 # tile all windows
 unbind =
 bind = select-layout tiled
 
-# set vi mode for copy mode
-setw -g mode-keys vi
-
-# more settings to make copy-mode more vim-like
+# Makes Copypasta work in termianl vim when paired with tmux-yank
 unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+
+# -------------------
+# TMUX Plugin Manager
+# -------------------
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'         # Boilerplate for settings 'that should be acceptable to everyone'
+set -g @plugin 'tmux-plugins/tmux-pain-control'     # Sets up vim like default key bindings for panes
+set -g @plugin 'tmux-plugins/tmux-yank'             # Enable copy-pasta from tmux panes
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
