Setup initial tmux pane index to start 1 instead of 0

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,10 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 setw -g monitor-activity on
 set -g visual-activity on
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+
 # -------------------
 # KEYBINDINGS
 # -------------------
