--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,7 @@ set -g visual-activity on
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
-set -g pane-base-index 1
+setw -g pane-base-index 1
 
 # -------------------
 # KEYBINDINGS
