Add fancy vim plugin for navigating tmux and vim panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,12 +36,18 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
 # -------------------
 # TMUX Plugin Manager
 # -------------------
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'         # Boilerplate for settings 'that should be acceptable to everyone'
-set -g @plugin 'tmux-plugins/tmux-pain-control'     # Sets up vim like default key bindings for panes
 set -g @plugin 'tmux-plugins/tmux-yank'             # Enable copy-pasta from tmux panes
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
