--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,12 @@
 # -------------------
 # SETTINGS/OPTIONS
 # -------------------
+# Don't lose ENV
+set -ga update-environment ' ITERM_PROFILE TMUX_STATUS_LEFT'
+
+# use 256 term for pretty colors
+set -g default-terminal "screen-256color"
+
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
@@ -12,17 +18,41 @@ set -g visual-activity on
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+set-option -gw automatic-rename off
+
+# re-number windows when one is closed
+set -g renumber-windows on
+
+# decrease command delay (increases vim responsiveness)
+set -sg escape-time 1
 
 # -------------------
 # KEYBINDINGS
 # -------------------
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+
 # remap prefix from 'C-b' to 'C-a'
 set-option -g prefix C-a
 unbind C-b
 bind-key a send-prefix
 
-# Enable mouse scrolling
-set-option -g -q mouse on
+# Force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind / switch-client -l
+
+# kill commands
+bind-key x kill-pane
+bind-key X kill-window
+bind q confirm-before kill-session
+bind Q confirm-before kill-server
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # tile all windows
 unbind =
@@ -33,8 +63,6 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
