--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,10 @@
 # Don't lose ENV
 set -ga update-environment ' ITERM_PROFILE TMUX_STATUS_LEFT'
 
-# use 256 term for pretty colors
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
 # remove administrative debris (session name, hostname, time) in status bar
