Change tmux status bar to match vim light theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,10 +10,6 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
-
 # enable activity monitoring, this will highlight the window in which the activity took place
 setw -g monitor-activity on
 set -g visual-activity on
@@ -28,6 +24,15 @@ set -g renumber-windows on
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
+
+# -------------------
+# STYLING 
+# -------------------
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right '#[fg=colour15]#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+set -g status-bg colour10
+set -g status-fg colour15
 
 # -------------------
 # KEYBINDINGS
