--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ set -ga update-environment ' ITERM_PROFILE TMUX_STATUS_LEFT'
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Default terminal is 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # enable activity monitoring, this will highlight the window in which the activity took place
 setw -g monitor-activity on
