Change statusbar theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,11 +28,15 @@ set -sg escape-time 1
 # -------------------
 # STYLING 
 # -------------------
-# remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-set -g status-right '#[fg=colour15]#{prefix_highlight} | %a %Y-%m-%d %H:%M'
-set -g status-bg colour10
-set -g status-fg colour15
+set -g status-right ''
+set -g status-bg colour16
+set -g status-fg colour2
+set -g window-status-activity-bg colour23
+set -g window-status-activity-fg colour2
+set -g window-status-current-bg colour2
+set -g window-status-current-fg colour8
+set -g window-status-bell-bg colour9
 
 # -------------------
 # KEYBINDINGS
