initial test of modified settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,71 +1,15 @@
 # -------------------
 # SETTINGS/OPTIONS
 # -------------------
-# Don't lose ENV
-set -ga update-environment ' ITERM_PROFILE TMUX_STATUS_LEFT'
-
-# Add truecolor support
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# Default terminal is 256 colors
-set -g default-terminal "screen-256color"
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
-
-# enable activity monitoring, this will highlight the window in which the activity took place
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
-set-option -gw automatic-rename off
-
-# re-number windows when one is closed
-set -g renumber-windows on
-
-# decrease command delay (increases vim responsiveness)
-set -sg escape-time 1
 
 # -------------------
 # KEYBINDINGS
 # -------------------
-# Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
 
-# remap prefix from 'C-b' to 'C-a'
-set-option -g prefix C-a
-unbind C-b
-bind-key a send-prefix
-
-# Force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind / switch-client -l
-
-# kill commands
-bind-key x kill-pane
-bind-key X kill-window
-bind q confirm-before kill-session
-bind Q confirm-before kill-server
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-# tile all windows
-unbind =
-bind = select-layout tiled
-
-# Makes Copypasta work in termianl vim when paired with tmux-yank
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
+# Pane Splitting
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -74,12 +18,3 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# -------------------
-# TMUX Plugin Manager
-# -------------------
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'         # Boilerplate for settings 'that should be acceptable to everyone'
-set -g @plugin 'tmux-plugins/tmux-yank'             # Enable copy-pasta from tmux panes
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
