--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,12 @@
 # SETTINGS/OPTIONS
 # -------------------
 
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Default terminal is 256 colors
+set -g default-terminal "xterm-256color"
+
 # -------------------
 # KEYBINDINGS
 # -------------------
