Change color scheme for tmux and vim to red-ish

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,13 +30,14 @@ set -sg escape-time 1
 # -------------------
 set -g status-left ''
 set -g status-right ''
-set -g status-bg colour16
-set -g status-fg colour2
-set -g window-status-activity-bg colour23
-set -g window-status-activity-fg colour2
-set -g window-status-current-bg colour2
-set -g window-status-current-fg colour8
-set -g window-status-bell-bg colour9
+set -g status-bg colour1
+set -g status-fg colour255
+set -g window-status-activity-bg colour1
+set -g window-status-activity-fg colour255
+set -g window-status-current-bg colour124
+set -g window-status-current-fg colour255
+set -g window-status-bell-bg colour255
+set -g window-status-bell-fg colour124
 
 # -------------------
 # KEYBINDINGS
