Add hashicorp applications and update tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,9 +10,9 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
 set -g default-terminal "xterm-256color"
 
-# enable activity monitoring, this will highlight the window in which the activity took place
+# activity monitoring, this will highlight the window in which the activity took place
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off # disable 'activity in window 2' message
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
