--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,7 +26,7 @@ set -g renumber-windows on
 set -sg escape-time 1
 
 # -------------------
-# STYLING 
+# STYLING
 # -------------------
 # Divider between panes
 set -g pane-border-bg colour235
@@ -83,8 +83,8 @@ bind q confirm-before kill-session
 bind Q confirm-before kill-server
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
