Update tmux config to new *-style format

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,25 +29,19 @@ set -sg escape-time 1
 # STYLING
 # -------------------
 # Divider between panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour51
 
 # Bottom status bar
 set -g status-interval 2    # Status bar refresh interval
-set -g status-attr dim
+set -g status-style dim
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-fg colour137
 set -g status-bg colour234
-set -g window-status-current-fg colour81
-set -g window-status-current-bg colour238
-set -g window-status-current-attr bold
+set -g window-status-current-style bg=colour81,fg=colour238,bold
 set -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-set -g window-status-fg colour138
-set -g window-status-bg colour235
-set -g window-status-attr none
+set -g window-status-style bg=colour138,fg=colour235,none
 set -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # TODO: :thinking: unable to get this to show properly
@@ -56,9 +50,7 @@ set -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]
 #set -g window-status-bell-bg colour9
 
 # Popup messages that show in status bar
-set -g message-attr bold
-set -g message-fg colour255
-set -g message-bg colour167
+set -g message-style bg=colour255,fg=colour167,bold
 
 # -------------------
 # KEYBINDINGS
