Lots of small changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,20 +29,18 @@ set -sg escape-time 1
 # STYLING
 # -------------------
 # Divider between panes
-set -g pane-border-style bg=colour235,fg=colour238
-set -g pane-active-border-style bg=colour236,fg=colour51
+#set -g pane-border-style bg=colour235,fg=colour238
+#set -g pane-active-border-style bg=colour236,fg=colour51
 
 # Bottom status bar
 set -g status-interval 2    # Status bar refresh interval
 set -g status-style dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-fg colour137
-set -g status-bg colour234
-set -g window-status-current-style bg=colour81,fg=colour238,bold
-set -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-set -g window-status-style bg=colour138,fg=colour235,none
-set -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+set -g status-right ''
+#set -g window-status-current-style bg=colour145,fg=colour16,bold
+#set -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+#set -g window-status-style fg=colour16,none
+#set -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # TODO: :thinking: unable to get this to show properly
 #set -g window-status-bell-attr bold
