--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -136,7 +136,7 @@ draw_bold_text_with_bright_colors: true
 # Colors (yui vim)
 colors:
   primary:
-    background: '0xefeae5'
+    background: '0xfafafa'
     foreground: '0x72645f'
   cursor:
     text: '0x2E3440'
