--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -18,7 +18,7 @@ brew "rbenv"         # tmux
 brew "ripgrep"
 brew "ruby-build"    # tmux
 brew "tmux"
-brew "yarn"
+#brew "yarn"
 
 cask "alacritty"
 cask "alfred"
