Extract tmux theme into separate file

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -76,22 +76,4 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcop
 bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-up
 bind-key -T copy-mode-vi WheelDownPane select-pane\; send-keys -t'{mouse}' -X clear-selection\; send-keys -t'{mouse}' -X -N 3 scroll-down
 
-# Status Bar
-# https://github.com/talwat/dotfiles/blob/main/macOS/everforest/.tmux.conf
-# Colours based off everforest
-set -g status-bg "#343F44"
-set -g status-fg white
-
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour18 fg=white'
-set -g status-left ''
-set -g status-right '#[fg=#3D484D,bg=#343F44]#[fg=white,bg=#3D484D] %d/%m #[fg=#83C092,bg=#3D484D]#[fg=#2D353B,bg=#83C092] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-style 'fg=#3D484D bg=#A7C080 bold'
-setw -g window-status-current-format ' #I#[fg=#475258]:#[fg=#3D484D]#W#[fg=#56635f]#F #[fg=#A7C080,bg=#343F44]'
-
-setw -g window-status-style 'fg=white bg=#475258'
-setw -g window-status-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F '
+source-file $XDG_CONFIG_HOME/tmux/tmux-dark.conf
