Swap colourscheme to iceberg from everforest

--- a/config/tmux/tmux-dark.conf
+++ b/config/tmux/tmux-dark.conf
@@ -1,20 +1,33 @@
-# Status Bar
-# https://github.com/talwat/dotfiles/blob/main/macOS/everforest/.tmux.conf
-# Colours based off everforest
-set -g status-bg "#343F44"
-set -g status-fg white
+# REPO: https://github.com/gkeep/iceberg-dark
+# MAINTAINER: gkeep <gkeep77@protonmail.com>
 
 set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour18 fg=white'
-set -g status-left ''
-set -g status-right '#[fg=#3D484D,bg=#343F44]#[fg=white,bg=#3D484D] %d/%m #[fg=#83C092,bg=#3D484D]#[fg=#2D353B,bg=#83C092] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
+set -g status-justify centre
+set -g status-style "bg=#1e2132"
+set -g window-style ""
+set -g window-active-style ""
 
-setw -g window-status-current-style 'fg=#3D484D bg=#A7C080 bold'
-setw -g window-status-current-format ' #I#[fg=#475258]:#[fg=#3D484D]#W#[fg=#56635f]#F #[fg=#A7C080,bg=#343F44]'
+# modules
+module_left_1=""
+module_left_2=""
 
-setw -g window-status-style 'fg=white bg=#475258'
-setw -g window-status-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F '
+module_right_1="%a %d %b"
+module_right_2="%R %Z"
 
+set -g status-left " #[fg=#c6c8d1]$module_left_1 #[fg=#6b7089]$module_left_2"
+set -g status-left-style ""
+set -g status-left-length 50
+
+# set -g status-right "$module_right_1 #[fg=#c6c8d1]$module_right_2 "
+set -g status-right ""
+set -g status-right-style "fg=#6b7089"
+set -g status-right-length 25
+
+set -g window-status-current-style "bold"
+set -g window-status-style "fg=#6b7089"
+set -g window-status-format "#I:#[fg=#c6c8d1]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-current-format "#I:#[fg=#c6c8d1]#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
+set -g window-status-separator ""
+
+set -g pane-active-border-style "fg=#6b7089"
+set -g pane-border-style "fg=#6b7089"
