--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,12 +1,15 @@
 live_config_reload: true
 
 import:
-  - ~/.config/alacritty/themes/everforest_dark_hard.yml
+  - ~/.config/alacritty/themes/dark.yml
 
 env:
   TERM: xterm-256color
 
 window:
+  dimensions:
+    columns: 82
+    lines: 40
   padding:
     x: 10
     y: 10
