--- a/config/system-theme-notify/config.toml
+++ b/config/system-theme-notify/config.toml
@@ -1,5 +1,5 @@
 dark_mode_commands = [
-  '''sed -i '' "s/light.yml/dark.yml/" ~/.config/alacritty/alacritty.yml''',
+  '''sed -i '' "s/light.yml/dark.yml/" ~/.config/alacritty/alacritty.toml''',
   '''tmux source-file ~/.config/tmux/tmux-dark.conf''',
   '''
   for SERVER_PIPE in $(find "${XDG_RUNTIME_DIR:-${TMPDIR}nvim.${USER}}" -type s); do
@@ -9,7 +9,7 @@ dark_mode_commands = [
 ]
 
 light_mode_commands = [
-  '''sed -i '' "s/dark.yml/light.yml/" ~/.config/alacritty/alacritty.yml''',
+  '''sed -i '' "s/dark.yml/light.yml/" ~/.config/alacritty/alacritty.toml''',
   '''tmux source-file ~/.config/tmux/tmux-light.conf''',
   '''
   for SERVER_PIPE in $(find "${XDG_RUNTIME_DIR:-${TMPDIR}nvim.${USER}}" -type s); do
