Add tools to mise config.toml

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -1,6 +1,12 @@
 [tools]
+usage = "latest" # for mise completions
 erlang = "latest"
 elixir = "latest"
 node = "latest"
 rust = "latest"
 python = "latest"
+java = "temurin-17"
+kubectl = "latest"
+
+[settings]
+python_compile = true
