--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,18 +4,22 @@
 
 - clean: ['~']
 
+# Install cross-platform configs
+- crossplatform-link:
+    ~/.gitconfig: config/git/gitconfig
+    ~/.gitignore_global: config/git/gitignore_global
+
+# Install windows specific configs
 - defaults:
     crossplatform-shell:
       platform: win32
     crossplatform-link:
       platform: win32
-
 - crossplatform-shell:
     # Create directories before symlinking files
     - command: if not exist "%USERPROFILE%\Documents\PowerShell" mkdir "%USERPROFILE%\Documents\PowerShell"
     - command: if not exist "%USERPROFILE%\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState" mkdir "%USERPROFILE%\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState"
     - command: if not exist "%USERPROFILE%\AppData\Local\nvim" mkdir "%USERPROFILE%\AppData\Local\nvim"
-
 - crossplatform-link:
     ~/Documents/PowerShell/Profile.ps1:
       path: config/powershell/Profile.ps1
