--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dotbot-crossplatform"]
 	path = dotbot-crossplatform
 	url = git@github.com:msdrigg/dotbot-crossplatform.git
+[submodule "dotbot-scoop"]
+	path = dotbot-scoop
+	url = git@github.com:JamJar00/dotbot-scoop.git
