--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,11 +9,7 @@
     ~/.gitconfig: config/git/gitconfig
     ~/.gitignore_global: config/git/gitignore_global
 
-# Install windows specific configs
 - crossplatform-shell:
-    # Decrypt git secrets
-    - command: sops --decrypt config\git\gitlocal.win.sops.ini > %USERPROFILE%\.gitlocal
-      platform: win32
     # Create directories before symlinking files
     - command: if not exist "%USERPROFILE%\Documents\PowerShell" mkdir "%USERPROFILE%\Documents\PowerShell"
       platform: win32
@@ -31,6 +27,11 @@
       platform: win32
     - command: powershell -Command "winget install Microsoft.PowerToys --source winget --no-upgrade; if ($? -eq $True -or $LASTEXITCODE -eq -1978335135) { $True } else { $False }"
       platform: win32
+    # Decrypt git secrets
+    - command: sops --decrypt config\git\gitlocal.win.sops.ini > %USERPROFILE%\.gitlocal
+      platform: win32
+    - command: sops --decrypt config/git/gitlocal.wsl.sops.ini > ~/.gitlocal
+      environment: WSL_DISTRO_NAME
 - crossplatform-link:
     ~/Documents/PowerShell/Profile.ps1:
       path: config/powershell/Profile.ps1
