feat: symlink and activate mise on linux

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,8 @@
       platform: linux
     - command: mkdir -p ~/.config/starship
       platform: linux
+    - command: mkdir -p ~/.config/mise
+      platform: linux
     - command: mkdir -p ~/.config/nvim
       platform: linux
     # Install applications using windows package manager
@@ -60,6 +62,10 @@
     # starship-rs
     ~/.config/starship/starship.toml:
       path: config/starship/starship.toml
+      platform: linux
+    # mise
+    ~/.config/mise/config.toml:
+      path: config/mise/config.toml
       platform: linux
     # neovim
     ~/AppData/Local/nvim/:
