feat: symlink tmux config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -80,6 +80,11 @@
     ~/.editorconfig:
       path: config/editorconfig
       platform: linux
+    # tmux
+    ~/.config/tmux:
+      path: config/tmux/
+      platform: linux
+      force: true
 - scoop:
     buckets:
       - main
