feat: add tmux window manager keybindings

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -68,6 +68,26 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+# Window + Pane Management
+## New window
+bind-key -n 'M-t' new-window
+## Close window
+bind-key -n 'M-w' confirm-before -p "Close window? (y/n)" kill-window
+## Create new pane in direction
+bind-key -n 'M-h' split-window -h -b
+bind-key -n 'M-j' split-window
+bind-key -n 'M-k' split-window -b
+bind-key -n 'M-l' split-window -h
+# Go to numbered tab
+bind-key -n 'M-1' select-window -t 1
+bind-key -n 'M-2' select-window -t 2
+bind-key -n 'M-3' select-window -t 3
+bind-key -n 'M-4' select-window -t 4
+bind-key -n 'M-5' select-window -t 5
+bind-key -n 'M-6' select-window -t 6
+bind-key -n 'M-7' select-window -t 7
+bind-key -n 'M-8' select-window -t 8
+
 # Stay in copy mode on mouse release
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
