feat(win): disable bell sound on windows terminal

--- a/config/windows-terminal/settings.json
+++ b/config/windows-terminal/settings.json
@@ -53,7 +53,8 @@
                     "liga": 0
                 }
             },
-            "useAcrylic": true
+            "useAcrylic": true,
+            "bellStyle": "window"
         },
         "list": 
         [
