feat: install rye for python dependencies

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -7,6 +7,7 @@ rust = "latest"
 python = "latest"
 java = "temurin-17"
 kubectl = "latest"
+rye = "latest" # python package manager
 
 [settings]
 python_compile = true
