--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -8,6 +8,7 @@ python = "latest"
 java = "temurin-17"
 kubectl = "latest"
 rye = "latest" # python package manager
+lua = "5.1" # lazy.nvim luarocks requires 5.1
 stylua = "latest" # lua code formatting
 
 [settings]
